fix parallax images on mobile devices

--- a/docs/static-fw/css/intel.css
+++ b/docs/static-fw/css/intel.css
@@ -87,7 +87,7 @@ footer span + span::before {
   background-size: cover;
   background-repeat: no-repeat;
 }
-@media (any-hover: hover) {
+@media (hover: none) {
 .parallax {
   min-height: 256px;
   background-attachment: initial;
